--- a/index.html
+++ b/index.html
@@ -105,27 +105,35 @@
                 <h2 class="zagolovok-komanda">Наша команда</h2>
                 <ul class="comanda-ul">
                     <li class="comanda-li">
-                        <img src="images/img3.jpg" alt="ігор дем'яненко" width="270">
-                        <h3 class="ima">Ігор Дем'яненко</h3>
-                        <p class="zanatia">Product Designer</p>
+                        <img src="images/img3.jpg" alt="ігор дем'яненко" width="270" class="kartinka">
+                        <div class="blok-kartinka">
+                            <h3 class="ima">Ігор Дем'яненко</h3>
+                            <p class="zanatia">Product Designer</p>
+                        </div>
                     </li>
 
                     <li class="comanda-li">
-                        <img src="images/img4.jpg" alt="ольга рєпіна" width="270">
-                        <h3 class="ima">Ольга Рєпіна</h3>
-                        <p class="zanatia">Frontend Developer</p>
+                        <img src="images/img4.jpg" alt="ольга рєпіна" width="270" class="kartinka">
+                        <div class="blok-kartinka">
+                            <h3 class="ima">Ольга Рєпіна</h3>
+                            <p class="zanatia">Frontend Developer</p>
+                        </div>
                     </li>
 
                     <li class="comanda-li">
-                        <img src="images/img5.jpg" alt="микола тарасов" width="270">
-                        <h3 class="ima">Микола Тарасов</h3>
-                        <p class="zanatia">Marketing</p>
+                        <img src="images/img5.jpg" alt="микола тарасов" width="270" class="kartinka">
+                        <div class="blok-kartinka">
+                            <h3 class="ima">Микола Тарасов</h3>
+                            <p class="zanatia">Marketing</p>
+                        </div>
                     </li>
 
                     <li class="comanda-li">
-                        <img src="images/img6.jpg" alt="михайло єрмаков" width="270">
-                        <h3 class="ima">Михайло Єрмаков</h3>
-                        <p class="zanatia">UI Designer</p>
+                        <img src="images/img6.jpg" alt="михайло єрмаков" width="270" class="kartinka">
+                        <div class="blok-kartinka">
+                            <h3 class="ima">Михайло Єрмаков</h3>
+                            <p class="zanatia">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -136,13 +144,13 @@
     <footer class="footer">
         <div class="konteiner flex">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
-            <address>
+            <address class="address">
                 <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul>
                     <li class="li">
                         <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                     </li>
-                    <li class="li">
+                    <li>
                         <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
                     </li>
                 </ul>
