--- a/portfolio.html
+++ b/portfolio.html
@@ -45,75 +45,95 @@
     </header>
     <!-- Menu -->
     <main>
-        <section>
+        <section class="section">
             <!-- Navigacia -->
-
-            <ul class="navigasia">
-                <li><button type="button" class="button">Усі</button></li>
-                <li><button type="button" class="button">Веб-сайти</button></li>
-                <li><button type="button" class="button">Додатки</button></li>
-                <li><button type="button" class="button">Дизайн</button></li>
-                <li><button type="button" class="button">Маркетинг</button></li>
-            </ul>
-
+            <div class="konteiner flex">
+                <ul class="navigasia">
+                    <li><button type="button" class="button">Усі</button></li>
+                    <li><button type="button" class="button">Веб-сайти</button></li>
+                    <li><button type="button" class="button">Додатки</button></li>
+                    <li><button type="button" class="button">Дизайн</button></li>
+                    <li><button type="button" class="button">Маркетинг</button></li>
+                </ul>
+            </div>
             <!-- Kartinki -->
-
-            <ul class="menu">
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img.jpg" alt="технокряк" width="370px">
-                        <h2 class="zagolovok">Технокряк</h2>
-                        <p class="p">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img1.jpg" alt="постер баскедбольной команди" width="370px">
-                        <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
-                        <p class="p">Дизайн</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
-                        <h2 class="zagolovok">Ресторан Seafood</h2>
-                        <p class="p">Додаток</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img3.jpg" alt="наушники" width="370px">
-                        <h2 class="zagolovok">Проєкт Prime</h2>
-                        <p class="p">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img4.jpg" alt="коробочки" width="370px">
-                        <h2 class="zagolovok">Проєкт Boxes</h2>
-                        <p class="p">Додаток</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img5.jpg" alt="монитор" width="370px">
-                        <h2 class="zagolovok">Inspiration has no Borders</h2>
-                        <p class="p">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img6.jpg" alt="книга" width="370px">
-                        <h2 class="zagolovok">Видання Limited Edition</h2>
-                        <p class="p">Дизайн</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img7.jpg" alt="постер проекта" width="370px">
-                        <h2 class="zagolovok">Проєкт LAB</h2>
-                        <p class="p">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="li">
-                    <a href="" class="cilka"><img src="./img/img8.jpg" alt="робота за компом" width="370px">
-                        <h2 class="zagolovok">Growing Business</h2>
-                        <p class="p">Додаток</p>
-                    </a>
-                </li>
-            </ul>
+            <div class="konteiner flex">
+                <ul class="menu">
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img.jpg" alt="технокряк" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Технокряк</h2>
+                                <p class="p">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img1.jpg" alt="постер баскедбольной команди"
+                                width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
+                                <p class="p">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Ресторан Seafood</h2>
+                                <p class="p">Додаток</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img3.jpg" alt="наушники" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Проєкт Prime</h2>
+                                <p class="p">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img4.jpg" alt="коробочки" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Проєкт Boxes</h2>
+                                <p class="p">Додаток</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img5.jpg" alt="монитор" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Inspiration has no Borders</h2>
+                                <p class="p">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img6.jpg" alt="книга" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Видання Limited Edition</h2>
+                                <p class="p">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img7.jpg" alt="постер проекта" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Проєкт LAB</h2>
+                                <p class="p">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="li">
+                        <a href="" class="kartinka"><img src="./img/img8.jpg" alt="робота за компом" width="370px">
+                            <div class="div">
+                                <h2 class="zagolovok">Growing Business</h2>
+                                <p class="p">Додаток</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- Podval -->
@@ -126,7 +146,7 @@
                     <li class="li">
                         <a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a>
                     </li>
-                    <li class="li">
+                    <li>
                         <a href="tel:+380961111111" class="nomer">+38 096 111 11 11</a>
                     </li>
                 </ul>
