--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,9 @@
     <!-- Menu -->
     <main>
         <section class="section">
-            <!-- Navigacia -->
             <div class="konteiner flex">
+                <!-- Navigacia -->
+
                 <ul class="navigasia">
                     <li><button type="button" class="button">Усі</button></li>
                     <li><button type="button" class="button">Веб-сайти</button></li>
@@ -55,12 +56,13 @@
                     <li><button type="button" class="button">Дизайн</button></li>
                     <li><button type="button" class="button">Маркетинг</button></li>
                 </ul>
-            </div>
-            <!-- Kartinki -->
-            <div class="konteiner flex">
+
+                <!-- Kartinki -->
+
                 <ul class="menu">
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img.jpg" alt="технокряк" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img.jpg" alt="технокряк" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Технокряк</h2>
                                 <p class="p">Веб-сайт</p>
@@ -68,8 +70,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img1.jpg" alt="постер баскедбольной команди"
-                                width="370px">
+                        <a href="" class="ccilka"><img src="./img/img1.jpg" alt="постер баскедбольной команди"
+                                width="370px" class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Постер New Orlean vs Golden Star</h2>
                                 <p class="p">Дизайн</p>
@@ -77,7 +79,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img2.jpg" alt="логотип ресторана" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img2.jpg" alt="логотип ресторана" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Ресторан Seafood</h2>
                                 <p class="p">Додаток</p>
@@ -85,7 +88,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img3.jpg" alt="наушники" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img3.jpg" alt="наушники" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Проєкт Prime</h2>
                                 <p class="p">Маркетинг</p>
@@ -93,7 +97,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img4.jpg" alt="коробочки" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img4.jpg" alt="коробочки" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Проєкт Boxes</h2>
                                 <p class="p">Додаток</p>
@@ -101,7 +106,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img5.jpg" alt="монитор" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img5.jpg" alt="монитор" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Inspiration has no Borders</h2>
                                 <p class="p">Веб-сайт</p>
@@ -109,7 +115,7 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img6.jpg" alt="книга" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img6.jpg" alt="книга" width="370px" class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Видання Limited Edition</h2>
                                 <p class="p">Дизайн</p>
@@ -117,7 +123,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img7.jpg" alt="постер проекта" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img7.jpg" alt="постер проекта" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Проєкт LAB</h2>
                                 <p class="p">Маркетинг</p>
@@ -125,7 +132,8 @@
                         </a>
                     </li>
                     <li class="li">
-                        <a href="" class="kartinka"><img src="./img/img8.jpg" alt="робота за компом" width="370px">
+                        <a href="" class="ccilka"><img src="./img/img8.jpg" alt="робота за компом" width="370px"
+                                class="kartinka">
                             <div class="div">
                                 <h2 class="zagolovok">Growing Business</h2>
                                 <p class="p">Додаток</p>
@@ -140,7 +148,7 @@
     <footer class="footer">
         <div class="konteiner flex">
             <a href="" class="logo"><span class="web">Web</span>Studio</a>
-            <address>
+            <address class="address">
                 <p class="gorod">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul>
                     <li class="li">
